# pyscript

./: .gitignore  LICENSE  README.md  pyscript-init.py  pyscript-template.py  pyscript-tools.py
template/: .gitignore  README.md  cookiecutter.json  example_template_config.yaml
template/hooks/: post_gen_project.py  pre_gen_project.py
template/scripts/: build_archive.sh
template/{{ cookiecutter.project_slug }}/: .flake8  .gitignore  .gitignore.tmpl  .pre-commit-config.yaml  README.md  pyproject.toml
template/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/: __init__.py  __main__.py  cli.py  cli_utils.py  config.py  default.py
template/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/cli/: __init__.py  init_cfg.py  root.py  utils.py
template/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/config/: __init__.py  credentials.py  default.py
template/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module }}/logging/: __init__.py
